@@ -1,7 +1,7 @@
 /* Extended Module Player
- * Copyright (C) 1996-2006 Claudio Matsuoka and Hipolito Carraro Jr
+ * Copyright (C) 1996-2007 Claudio Matsuoka and Hipolito Carraro Jr
  *
- * $Id: misc.c,v 1.4 2007-08-04 20:08:15 cmatsuoka Exp $
+ * $Id: misc.c,v 1.5 2007-08-14 00:03:17 cmatsuoka Exp $
  *
  * This file is part of the Extended Module Player and is distributed
  * under the terms of the GNU General Public License. See doc/COPYING
@@ -54,7 +54,7 @@ char *copy_adjust(uint8 *s, uint8 *r, int n)
 
     for (i = 0; i < n; i++)
 	if (!isprint(s[i]) || ((uint8) s[i] > 127))
-	    s[i] = ' ';
+	    s[i] = '.';
 
     while (*s && (s[strlen((char *)s) - 1] == ' '))
 	s[strlen((char *)s) - 1] = 0;
